@@ -1,0 +1,13 @@
+Source: hockeypuck
+Section: universe/net
+Priority: optional
+Maintainer: Casey Marshall <casey.marshall@gazzang.com>
+Build-Depends: debhelper (>= 8.0.0), golang-go, mercurial, bzr, git-core
+Standards-Version: 3.9.2
+Homepage: http://launchpad.net/hockeypuck
+
+Package: hockeypuck
+Architecture: i386 amd64
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: Hockeypuck: OpenPGP Key Server
+ Hockeypuck is an OpenPGP Key Server implementing the HTTP Keyserver Protocol (HKP).
