@@ -32,5 +32,8 @@ hockeypuck (0.1~alpha) UNRELEASED; urgency=low
     - Main hockeypuck executable now starts a postgres-backed server.
     - Added flag parsing.
     - Hey, it kind of works now.
+  * === added directory debian/source, debian/compat, debian/control,
+    debian/copyright, debian/rules, debian/source/format, Makefile:
+    - Add debian packaging. LP: #1040379
 
- -- Casey Marshall <casey.marshall@gazzang.com>  Wed, 22 Aug 2012 20:37:48 -0500
+ -- Casey Marshall <casey.marshall@gazzang.com>  Wed, 22 Aug 2012 23:51:10 -0500
